--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
+    "chalk": "^5.1.2",
+    "chokidar": "^3.5.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "less": "^4.0.0",
     "less-loader": "^7.2.1",
+    "mockjs": "^1.1.0",
     "node-sass": "^4.12.0",
     "postcss-px-to-viewport": "^1.1.1",
     "sass-loader": "^8.0.2",
