--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dateformat": "^4.4.1",
+    "pinia": "^2.0.25",
     "vant": "^3.0.6",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
@@ -27,6 +28,7 @@
     "chokidar": "^3.5.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "jsonwebtoken": "^8.5.1",
     "less": "^4.0.0",
     "less-loader": "^7.2.1",
     "mockjs": "^1.1.0",
